# basicapp-bazel

./: .gitignore  MODULE.bazel  WORKSPACE.bzlmod
java/com/basicapp/: BUILD  BasicKotlin.kt
