module(name = "basicapp")

bazel_dep(name = "rules_jvm_external", version = "6.5")
bazel_dep(name = "rules_java", version = "7.12.2")
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "rules_android", version = "0.5.1")

remote_android_extensions = use_extension("@rules_android//bzlmod_extensions:android_extensions.bzl", "remote_android_tools_extensions")
use_repo(remote_android_extensions, "android_gmaven_r8", "android_tools")

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "app_deps",
    artifacts = [
        "androidx.constraintlayout:constraintlayout:2.1.4",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "app_deps")
